backend/backend_status.txt
C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
check_server.ts(2,19): error TS2307: Cannot find module 'axios' or its corresponding type declarations.

    at createTSError (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Taimoor\Desktop\CustConnect\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2307 ]
}
